docs/content/worlds/v4/vercel.mdx
---
title: Vercel World
description: Fully managed World for Vercel deployments with automatic storage, queuing, and authentication.
type: integration
summary: Deploy workflows to Vercel with fully managed storage, queuing, and authentication.
prerequisites:
  - /docs/deploying
related:
  - /docs/how-it-works/encryption
  - /worlds/local
  - /worlds/postgres
---

The Vercel World is a fully managed workflow backend for applications deployed on Vercel. It provides scalable storage, distributed queuing, and automatic authentication without configuration.

When you deploy to Vercel, workflows automatically use the Vercel World without requiring setup.

## Usage

Deploy your application to Vercel:

```bash
vercel deploy
```

Vercel automatically:

- Selects the Vercel World backend
- Configures authentication using OIDC tokens
- Provisions storage and queuing infrastructure
- Isolates data per environment (production, preview, and any custom environments)

<FluidComputeCallout />

## Vercel platform documentation

For complete details on pricing, usage limits, and included allotments on Vercel, see the official Vercel documentation:

- **[Vercel Workflow](https://vercel.com/docs/workflows)**: Pricing details, concepts, and observability for Workflow on Vercel
- **[Vercel limits](https://vercel.com/docs/limits)**: Platform-wide limits, including Workflow-specific constraints
- **[Vercel Hobby plan](https://vercel.com/docs/plans/hobby)**: Free-tier included usage for Workflow and other resources

For self-hosted deployments, use the [Postgres World](/worlds/postgres). For local development, use the [Local World](/worlds/local).

## Limitations

<Callout type="info">
  **Multi-region support is available starting with `workflow` version
  5.0.0.** On 5.x, workflow runs are pinned to the region that creates them, and
  storage, queuing, and streams are served region-locally instead of routing
  through `iad1`. See [Multi-region on the v5 version of this
  page](/v5/worlds/vercel#multi-region). The limitations
  below apply to the 4.x release line, which will not support multi-region.
</Callout>

- **Single-region deployment**: On the 4.x release line, the backend infrastructure is used only in `iad1`. Applications in other regions route workflow requests to `iad1`, which may result in higher latency. For best performance, deploy Vercel apps using Workflow to `iad1`, or upgrade to `workflow` 5.0.0 or later for multi-region support.

- **Data residency**: On the 4.x release line, workflow data is stored in the `iad1` region regardless of your application's deployment location.

## Observability

Workflow observability is built into the Vercel dashboard on your project page. It respects your existing authentication and project permission settings.

The `workflow` CLI commands open a browser window deeplinked to the Vercel dashboard:

```bash
# List workflow runs (opens Vercel dashboard)
npx workflow inspect runs --backend vercel

# Launch the web UI (opens Vercel dashboard)
npx workflow web --backend vercel
```

The CLI automatically retrieves authentication from the Vercel CLI (`vercel login`) and infers project/team IDs from your local Vercel project linking.

To use the local observability UI instead of the Vercel dashboard:

```bash
npx workflow web --backend vercel --localUi
```

To override the automatic configuration:

```bash
npx workflow inspect runs \
  --backend vercel \
  --env production \
  --project my-project \
  --team my-team \
  --authToken <your-token>
```

Learn more in the [Observability](/docs/observability) documentation.

## Connecting from outside a deployment

Inside a Vercel deployment there is nothing to authenticate: the platform injects a per-request OIDC token and the Vercel World uses it automatically. A process that is *not* a deployment has no such token — a script on your laptop, a CI job driving end-to-end tests against a preview, a one-off backfill. Those clients authenticate with a **Vercel auth token** instead. Vercel checks that token against your team and project permissions, and attributes the request to the environment you name.

<Callout type="warn">
  Do not reuse the `VERCEL_OIDC_TOKEN` that `vercel env pull` writes into
  `.env.local` as your Workflow credential. It is a local artifact of your
  linked project, not a credential for the Workflow API: requests made with it
  are attributed to the environment carried in the token itself, not to the
  `production` or `preview` data you mean to reach. Authenticate with a Vercel
  auth token instead. A pulled OIDC token is still the right thing for
  [bypassing deployment
  protection](https://vercel.com/docs/deployment-protection/methods-to-bypass-deployment-protection/trusted-sources)
  when your script has to fetch a protected preview URL; that is a separate
  credential from the one that talks to the Workflow API.
</Callout>

### Environment variables

These four values are what an external client needs. The names are the convention shared by the `workflow` CLI, the web UI, and Workflow's own CI:

| Variable | Value | Notes |
| --- | --- | --- |
| `WORKFLOW_VERCEL_AUTH_TOKEN` | Vercel auth token | Keep it secret. Create one under [account settings → tokens](https://vercel.com/account/tokens), scoped to the team that owns the project. |
| `WORKFLOW_VERCEL_TEAM` | Vercel team ID (`team_...`) | Required. Set it together with the token and the project ID. |
| `WORKFLOW_VERCEL_PROJECT` | Vercel project ID (`prj_...`) | Required. Set it together with the token and the team ID. |
| `WORKFLOW_VERCEL_ENV` | `production`, `preview`, or a custom environment's slug | Defaults to `production`. See [`WORKFLOW_VERCEL_ENV`](#workflow_vercel_env). |

Both IDs are in `.vercel/project.json` after `vercel link` — `projectId` is the project, `orgId` the team or user that owns it — or on the project's settings page.

Three more are situational:

- `VERCEL_DEPLOYMENT_ID` — required to **start** runs, not to read them. See [Starting runs](#starting-runs-from-outside-a-deployment).
- `WORKFLOW_VERCEL_PROJECT_NAME` — the project slug, used only to build dashboard links.
- `VERCEL_TOKEN` — a fallback the World reads for the Vercel API calls it makes alongside your Workflow requests (fetching a run's encryption key, resolving `deploymentId: "latest"`). A client that passes `token` explicitly, as below, already covers those calls and does not need it.

For a custom environment, set `WORKFLOW_VERCEL_ENV` to the environment's **slug**, not its ID.

<Callout type="info">
  The Workflow SDK does not read `WORKFLOW_VERCEL_*` from the environment on
  your behalf — the runtime's own `createWorld()` deliberately ignores them, so
  that a stray variable on a deployed project cannot redirect a live
  application. Read them in your own code and pass them to the World factory,
  as below. Setting them on a deployed Vercel project has no effect on runtime
  configuration, and the runtime warns when it sees them there.
</Callout>

### Wiring it up in a script

Build the Vercel World with an explicit config and install it with [`setWorld()`](/docs/api-reference/workflow-runtime/set-world) before the first `workflow/api` call:

{/*@skip-typecheck: incomplete code sample*/}

```typescript title="scripts/start-run.ts" lineNumbers
import { start } from "workflow/api";
import { setWorld } from "workflow/runtime";
import { createVercelWorld } from "@workflow/world-vercel";
import { myWorkflow } from "../workflows/my-workflow";

setWorld(
  createVercelWorld({
    token: process.env.WORKFLOW_VERCEL_AUTH_TOKEN, // [!code highlight]
    projectConfig: {
      projectId: process.env.WORKFLOW_VERCEL_PROJECT, // [!code highlight]
      teamId: process.env.WORKFLOW_VERCEL_TEAM, // [!code highlight]
      environment: process.env.WORKFLOW_VERCEL_ENV, // [!code highlight]
    },
  })
);

const run = await start(myWorkflow, ["input"]);
console.log(run.runId);
```

Supply `token`, `projectId`, and `teamId` together. Setting the two IDs without a token fails immediately, with a message naming the missing token, rather than surfacing later as an opaque `401`.

The same token authorizes the per-run key fetch that decrypts run and step data, so reads come back as values rather than opaque bytes — see [Encryption](/docs/how-it-works/encryption).

This is exactly what the `workflow` CLI does under the hood. It resolves the same four values — from `--authToken` / `--project` / `--team` / `--env`, then the `WORKFLOW_VERCEL_*` variables, then `.vercel/project.json` and your `vercel login` credentials — and constructs the World with them. Passing them explicitly is the non-interactive equivalent of being logged in and linked.

### Starting runs from outside a deployment

[`start()`](/docs/api-reference/workflow-api/start) has to name a deployment, because a run executes the code of the deployment that created it. Inside a deployment that is the current one; outside, there is nothing to infer, so set `VERCEL_DEPLOYMENT_ID` to the deployment whose code should run the workflow:

```bash
# `vercel inspect` prints the dpl_... ID for a deployment URL
vercel inspect https://my-app-abc123.vercel.app
```

Reads such as [`getRun()`](/docs/api-reference/workflow-api/get-run) do not need it. `start(..., { deploymentId: "latest" })` does: it resolves the newest deployment sharing that deployment's environment, so it needs one to start from.

<Callout type="warn">
  Keep `WORKFLOW_VERCEL_ENV` and the environment of the deployment named by
  `VERCEL_DEPLOYMENT_ID` aligned. The run is created in the environment you
  authenticate as, but executes the code of the deployment you name — a run
  whose two halves land in different environments will not execute as
  expected.
</Callout>

### In CI

Wait for the deployment under test, then hand its ID to the test step alongside the four auth variables. This is how Workflow's own end-to-end suite authenticates against its preview and production deployments:

```yaml title=".github/workflows/e2e.yml" lineNumbers
jobs:
  e2e:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4

      - name: Wait for the Vercel deployment
        id: deployment
        uses: vercel/wait-for-deployment-action@0e2b0c5c5cce31f1648108aeec56467187aca037
        with:
          project-slug: my-app
          environment: ${{ github.ref == 'refs/heads/main' && 'production' || 'preview' }}

      - name: Run end-to-end tests
        run: pnpm test:e2e
        env:
          WORKFLOW_VERCEL_AUTH_TOKEN: ${{ secrets.VERCEL_TOKEN }}
          WORKFLOW_VERCEL_TEAM: team_xxxxxxxxxxxxxxxx
          WORKFLOW_VERCEL_PROJECT: prj_xxxxxxxxxxxxxxxx
          WORKFLOW_VERCEL_ENV: ${{ github.ref == 'refs/heads/main' && 'production' || 'preview' }}
          VERCEL_DEPLOYMENT_ID: ${{ steps.deployment.outputs.deployment-id }}
```

Store the token as an encrypted secret and derive `WORKFLOW_VERCEL_ENV` from the branch, so a pull request run never authenticates as `production`.

If the deployment is behind deployment protection, the job also needs a way to reach its URL. Grant the workflow `id-token: write` and mint a short-lived OIDC token from the runner for the `x-vercel-trusted-oidc-idp-token` header; that credential is for [Trusted Sources](https://vercel.com/docs/deployment-protection/methods-to-bypass-deployment-protection/trusted-sources) only and is separate from the Vercel auth token above.

## Testing & compatibility

<WorldTestingPerformance worldId="vercel" />

## Configuration

The Vercel World requires no configuration when deployed to Vercel. For advanced use cases, you can override settings programmatically via `createVercelWorld()`.

The `WORKFLOW_VERCEL_*` variables below configure tooling that talks to a Vercel Workflow project from outside a deployment. For the task-oriented version — which ones a local script or CI job needs, and how to hand them to the SDK — see [Connecting from outside a deployment](#connecting-from-outside-a-deployment).

### `WORKFLOW_VERCEL_ENV`

The Vercel environment to use. Options: `production`, `preview`, or a custom environment's slug. Default: `production`. See [Environment variables](#environment-variables) for how a custom environment is resolved.

### `WORKFLOW_VERCEL_AUTH_TOKEN`

Authentication token for API requests. Automatically detected.

### `WORKFLOW_VERCEL_PROJECT`

Vercel project ID for API requests. Automatically detected.

### `WORKFLOW_VERCEL_TEAM`

Vercel team ID for API requests. Automatically detected.

### `WORKFLOW_VERCEL_BACKEND_URL`

Custom base URL for the Vercel workflow API. Automatically detected.

### `WORKFLOW_SEQUENTIAL_REPLAYS`

Set `WORKFLOW_SEQUENTIAL_REPLAYS=1` to guarantee that **at most one orchestrator (flow) invocation runs at a time per workflow run**. This behavior is off by default; without it, the runtime relies on idempotency and the event log to tolerate concurrent flow invocations of the same run.

When enabled, each run is given its own queue topic and the flow route is configured with `maxConcurrency: 1`, so [Vercel Queues](https://vercel.com/docs/queues) processes flow messages for a given run strictly one at a time. Step routes are unaffected and continue to run with full concurrency.

<Callout type="warn">
  This variable is read at **both build time and runtime**, so it must be set as a project-level environment variable that applies to your build and your deployed functions. Setting it for only one will produce an inconsistent configuration. The same applies to framework integrations that write their own queue trigger configuration instead of using `getWorkflowQueueTrigger()` from `@workflow/builders`: they only get the runtime half (per-run topics) unless they also emit `maxConcurrency: 1` on their flow trigger.
</Callout>

Because it routes each run's flow invocations through a dedicated `maxConcurrency: 1` queue topic, enabling this might lead to higher queue performance overhead.

### `WORKFLOW_NODE_HTTP`

Set `WORKFLOW_NODE_HTTP=1` to make the Vercel World issue its HTTP requests through Node's built-in `node:http` and `node:https` modules instead of the HTTP client library (undici) it normally uses. Off by default.

This exists for deployments where that library is not usable, rather than as a tuning knob. Reach for it when:

- your bundler mangles the library's internals, so requests through it fail or never settle;
- your build pairs a bundled copy of the library with a different copy inside the runtime, which can produce errors like `Cannot read private member #… from an object whose class did not declare it`;
- you want to rule the transport out while diagnosing event-delivery or queue problems.

The symptom that most often leads here is a workflow whose steps all complete while the invocation itself never returns, and whose queue messages are delivered repeatedly and never acknowledged. A killed invocation cannot acknowledge its message, so the queue redelivers it to the same deployment and each redelivery holds a function for the full `maxDuration`. Check your project's Queues view for a topic with a high received count and a delete count near zero.

Requests reached through `fetch()` are covered too, so a runtime whose `fetch()` is built on the same library still benefits.

<Callout type="warn">
  Node's modules do less than the client they replace, so enabling this drops per-call-site tuning and costs throughput on every deployment. That is why it is opt-in.

  - Event-log requests lose HTTP/2, so concurrent reads and writes no longer share one connection and the enlarged HTTP/2 receive windows no longer apply. This is the largest difference and it slows replays that read a large event log.
  - Requests lose their transport-level retry. Nothing is silently dropped, because the layers above still retry event writes and redeliver queue messages, but a failure a same-connection retry would have hidden now costs a full redelivery.
  - Stream close loses its retry of retriable server errors, so a transient failure at close can leave a stream marked closing until the run expires.

  Connection pooling, keep-alive, and the request, header, and body deadlines are preserved.
</Callout>

A `dispatcher` passed to `createVercelWorld()` still wins over this variable: supplying one is an instruction to use the library. The variable only chooses which transport the World builds when you have not supplied one.

### Programmatic configuration

`createVercelWorld()` accepts explicit API configuration. It does not read `WORKFLOW_VERCEL_*` automatically, so pass the environment values yourself. `projectId` and `teamId` are IDs, not slugs. To install the result as the World your app uses, see [Wiring it up in a script](#wiring-it-up-in-a-script).

{/*@skip-typecheck: incomplete code sample*/}

```typescript title="workflow.config.ts" lineNumbers
import { createVercelWorld } from "@workflow/world-vercel";

const world = createVercelWorld({
  token: process.env.WORKFLOW_VERCEL_AUTH_TOKEN,
  projectConfig: {
    projectId: "prj_...",
    teamId: "team_...",
    environment: "production",
  },
});
```

## Versioning

On Vercel, workflow runs are pegged to the deployment that started them. This means:

- Existing workflow runs continue executing on their original deployment, even as new code is deployed
- New workflow runs start on the latest deployment
- Code changes won't break in-flight workflows

This ensures long-running workflows complete reliably without being affected by subsequent deployments.

For the full model, including rerunning on latest and explicit upgrade boundaries, see [Versioning](/docs/foundations/versioning).

## Security

### Consumer function security

Workflow handler functions on Vercel are not accessible through public endpoints. During the build step, the Workflow SDK registers each handler as only reachable by [Vercel Queue](https://vercel.com/docs/queues), by using the `experimentalTriggers` configuration in `.vc-config.json`:

```json title=".vc-config.json (step handler)"
{
  "experimentalTriggers": [
    {
      "type": "queue/v2beta",
      "topic": "__wkf_step_*",
      "consumer": "default",
    }
  ]
}
```

Practically, this means:

- You don't need to add authentication or authorization logic to workflow handlers
- Unauthorized requests can never reach the step or workflow functions
- Only messages delivered through Vercel Queues can trigger execution
- Handlers receive only a message ID that must be retrieved from Vercel's backend, making it impossible to craft custom payloads

<Callout>
  The Workflow SDK build step manages this configuration. If you are writing a custom integration, see [Framework integrations: Security](/docs/how-it-works/framework-integrations#security) for more details.
</Callout>

## How it works

The Vercel World uses Vercel's infrastructure for workflow execution:

- **Storage**: Workflow data is stored in Vercel's cloud with automatic replication and [end-to-end encryption](/docs/how-it-works/encryption)
- **Queuing**: Steps are distributed across Vercel Functions through [Vercel Queues](https://vercel.com/docs/queues) with automatic retries and [consumer function security](#consumer-function-security)
- **Authentication**: OIDC tokens provide secure, automatic authentication inside deployments; clients outside one authenticate with a [Vercel auth token](#connecting-from-outside-a-deployment)

For more details, see the [Vercel Workflow documentation](https://vercel.com/docs/workflows).
